# ubuntu-server-image

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  Vagrantfile  build-box.sh  pyproject.toml
.github/: dependabot.yaml  labeler.yml  labels.yml
.github/workflows/: codeql.yml  dependency-review.yml  execution-environment.yml  first-interaction.yml  labeler.yml  stale.yml  ubuntu-server-image_ci.yml  vagrant-box.yml
.zed/: settings.json
ansible/: ansible.cfg  execution-environment.yml  site.yml
ansible/inventory/: vagrant.yml
ansible/roles/common/files/etc/apt/apt.conf.d/: 99aide-update
ansible/roles/common/files/etc/fail2ban/: jail.local
ansible/roles/common/files/etc/ssh/ssh_config.d/: 99-hardening.conf
ansible/roles/common/files/etc/sysctl.d/: 99-hardening.conf
ansible/roles/common/files/etc/systemd/system/: sysctl-network.service  tmp.mount
ansible/roles/common/files/etc/systemd/system/fail2ban.service.d/: override.conf
ansible/roles/common/files/usr/local/lib/maintenance.d/: apt-maintenance.sh  check-unowned.sh  (+21 more)
ansible/roles/common/files/usr/local/sbin/: maintenance
ansible/roles/common/files/usr/share/pam-configs/: faillock  faillock_notify  pwhistory  pwquality
ansible/roles/common/handlers/: main.yml
ansible/roles/common/meta/: main.yml
ansible/roles/common/molecule/default/: converge.yml  molecule.yml  prepare.yml
ansible/roles/common/molecule/default/tests/: test_default.py
ansible/roles/common/tasks/: main.yml
cloud-init/: network-config  user-data
packer/: ubuntu-server.pkr.hcl  variables.pkr.hcl
